# YewWebApp

./: .gitignore  Cargo.toml  index.html  readme.md
src/: main.rs
src/pages/: about.rs  home.rs  mod.rs
