[package]
name = "YewWebApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = { version = "0.19.3" }
yew-router = "0.16"
wasm-logger = "0.2"
log = "0.4"
lazy_static = "1.4.0"
gloo-timers = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }

